test/errors/include/ri3.asm
; recursive include file3
label ldb #3
    .include ri2.asm